Hardcoded values such as email and website into InvoiceDraft.java instead of leaving them as placeholders in invoice_template.yml.

--- a/src/main/resources/invoice_template.yml
+++ b/src/main/resources/invoice_template.yml
@@ -5,8 +5,8 @@ invoicer:
   name:
     given_name: "Shreyas"
     surname: "Ayyengar"
-  email_address: "{email}"
-  website: "{website}"
+  email_address: "shreyas.ayyengar@gmail.com"
+  website: "https://shreyasayyengar.dev"
 primary_recipients:
   - billing_info:
       email_address: "{client_email}"
