Added regular `System.gc()` calls. Will address memory issues at a more convenient time.

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
             <version>20220924</version>
         </dependency>
 
+        <!--suppress VulnerableLibrariesLocal --> <!-- This is a false positive -->
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
